--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "firebase": "^9.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
